X/Y/2013 ola-0.8.30
 * Clean up olad signal handling to avoid race conditions.

29/5/2013 ola-0.8.29
 * Added KiNet output support.
 * Added support for the Karate USB devices.
 * More E1.33 enhancements
 * Added usage information to the json urls
 * Minor fixes to the RDM responder tests
 * Lint the entire C++ codebase.
 * Fixed various flaky unittests
 * Introduced a new command line flags handling
 * Print command classes in the RDM Responder tests
 * Fix a memory leak detected by the leak checker
 * Patches to build correctly on Android

20/4/2013 ola-0.8.28
 * Add support for the LPD8806 pixels using SPI.
 * Fix the build on OS X Lion 10.7 - #231
 * Fix the build with clang 4.2
 * Added a simple E1.31 load test tool
 * Added the first E1.33 (RDMNet) tools
 * Switched to using the new command line flags module in some programs.
 * Man page for dmxmonitor - #219
 * Rename ola_universe_stats to ola_uni_stats, standardising names
 * Bash Completions for all programs in ola and ola-rdm-tests
 * Various minor fixes of program help
 * Addition and standardisation of PID options between ola_rdm_get/set and
   e133_controller
 * Standardised all the following long arguments from _ to - in programs and
   completion: --long_name --plugin_id --port_id --preview_mode --list_pids
   --sub_device
 * Complete plugin and universe ids in completions and add options to
   ola_uni_info and ola_plugin_info to assist with this
 * Internal cleanup

2/3/2013 ola-0.8.27
 * Changed the arguments to dmxmonitor - #219
 * Build fixes for various platforms
 * Added a SLP implementation (not installed right now)
 * Updated E1.33 to work with the latest draft
 * Add a script to enforce code licences
 * Add the slp_sa_test program
 * Improved support for the RDM-TRI
 * Added support for using the loopback interface with the ArtNet plugin
 * Fixed some bugs in the RDM tests
 * Add configure time options to disable each plugin
 * Fixed a bug in the sniffer tool