@@ -1,5 +1,6 @@
 X/Y/2013 ola-0.8.30
  * Clean up olad signal handling to avoid race conditions.
+ * Add an OLA manufacturer specific PID to the Dummy RDM Responder.
 
 29/5/2013 ola-0.8.29
  * Added KiNet output support.
